kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventflow-website
  namespace: default
  labels:
    app: eventflow-website
spec:
  selector:
    app: eventflow-website
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  type: ClusterIP
