kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlir-debugger-website
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.scheme: http
spec:
  ingressClassName: traefik
  rules:
  - host: www.niche-robotics.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlir-debugger-website
            port:
              number: 80
  tls:
  - hosts:
    - www.niche-robotics.tech
    secretName: www-niche-robotics-tech-tls
